--- a/.github/workflows/dotnet-build-and-release-win.yml
+++ b/.github/workflows/dotnet-build-and-release-win.yml
@@ -62,7 +62,7 @@ jobs:
           fi
 
       - name: Create tag if missing
-        if: steps.check_tag.outputs.tag_exists == 'false'
+        if: github.event_name == 'workflow_dispatch' && steps.check_tag.outputs.tag_exists == 'false'
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
