--- a/.github/workflows/dotnet-build-and-release-win.yml
+++ b/.github/workflows/dotnet-build-and-release-win.yml
@@ -29,6 +29,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
+          ref: ${{ inputs.branch }}
           fetch-depth: 0
 
       - name: Setup .NET
