--- a/.github/workflows/dotnet-build-and-release-win-sc.yml
+++ b/.github/workflows/dotnet-build-and-release-win-sc.yml
@@ -57,8 +57,9 @@ jobs:
         run: dotnet test ${{ inputs.project_path }} --no-build --verbosity normal
 
       - name: Publish
+        shell: bash
         run: |
-          if ( ${{ github.event.inputs.selfContained }} == "true" ); then
+          if ${{ github.event.inputs.selfContained }}; then
             dotnet publish ${{ inputs.project_path }} -c Release -r win-x64 --self-contained true /p:PublishSingleFile=true /p:IncludeAllContentForSelfExtract=true
           else
             dotnet publish ${{ inputs.project_path }} -c ${{ inputs.configuration }} -o publish_output
