--- a/.github/workflows/dotnet-build-and-release-win-sc.yml
+++ b/.github/workflows/dotnet-build-and-release-win-sc.yml
@@ -60,7 +60,7 @@ jobs:
         shell: bash
         run: |
           if ${{ github.event.inputs.selfContained }}; then
-            dotnet publish ${{ inputs.project_path }} -c Release -r win-x64 --self-contained true /p:PublishSingleFile=true /p:IncludeAllContentForSelfExtract=true
+            dotnet publish ${{ inputs.project_path }} -c Release -r win-x64 --self-contained true //p:PublishSingleFile=true //p:IncludeAllContentForSelfExtract=true
           else
             dotnet publish ${{ inputs.project_path }} -c ${{ inputs.configuration }} -o publish_output
           fi
