--- a/.github/workflows/dotnet-build-and-release-win-sc.yml
+++ b/.github/workflows/dotnet-build-and-release-win-sc.yml
@@ -60,13 +60,13 @@ jobs:
         shell: bash
         run: |
           if ${{ github.event.inputs.selfContained }}; then
-            dotnet publish ${{ inputs.project_path }} -c Release -r win-x64 --self-contained true //p:PublishSingleFile=true //p:IncludeAllContentForSelfExtract=true
+            dotnet publish ${{ inputs.project_path }} -o publish_output -c Release -r win-x64 --self-contained true //p:PublishSingleFile=true //p:IncludeAllContentForSelfExtract=true
           else
             dotnet publish ${{ inputs.project_path }} -c ${{ inputs.configuration }} -o publish_output
           fi
           
- #     - name: Zip output
- #       run: Compress-Archive -Path publish_output/* -DestinationPath ${{ inputs.zip_name }}
+      - name: Zip output
+        run: Compress-Archive -Path publish_output/* -DestinationPath ${{ inputs.zip_name }}
 
       - name: Check if tag exists
         id: check_tag
