--- a/.github/workflows/dotnet-build-and-release-win-sc.yml
+++ b/.github/workflows/dotnet-build-and-release-win-sc.yml
@@ -26,11 +26,7 @@ on:
         required: false
         type: string
         default: Release
-      selfContained:
-        description: 'SC?'
-        required: false
-        type: boolean
-        default: false
+      
 
 jobs:
   build-and-release:
@@ -58,12 +54,8 @@ jobs:
 
       - name: Publish
         shell: bash
-        run: |
-          if ${{ github.event.inputs.selfContained }}; then
-            dotnet publish ${{ inputs.project_path }} -o publish_output -c Release -r win-x64 --self-contained true //p:PublishSingleFile=true //p:IncludeAllContentForSelfExtract=true
-          else
-            dotnet publish ${{ inputs.project_path }} -c ${{ inputs.configuration }} -o publish_output
-          fi
+        run: dotnet publish ${{ inputs.project_path }} -o publish_output -c Release -r win-x64 --self-contained true //p:PublishSingleFile=true //p:IncludeAllContentForSelfExtract=true
+          
           
       - name: Zip output
         run: Compress-Archive -Path publish_output/* -DestinationPath ${{ inputs.zip_name }}
